components/Posts/Prose.module.scss
.prose {
    font-size: 1em;
    line-height: 1.75;
    text-transform: none;
    // max-width: 65ch;

    strong {
        font-weight: var(--fw-bold);
        color: var(--text-title);
    }

    em {
        font-style: italic;
    }

    ol {
        list-style: none;

        &[type="A"] {
            --list-counter-style: upper-alpha;
        }

        &[type="a"] {
            --list-counter-style: lower-alpha;
        }

        &[type="I"] {
            --list-counter-style: upper-roman;
        }

        &[type="i"] {
            --list-counter-style: lower-roman;
        }

        &[type="1"] {
            --list-counter-style: decimal;
        }

        > li {
            position: relative;
            padding-left: 1.75em;

            &:before {
                content: counter(list-item, var(--list-counter-style, decimal))
                    ".";
                position: absolute;
                font-weight: 400;
                color: var(--text-title);
                left: 0;
            }
        }
    }

    ul {
        list-style: none;

        > li {
            position: relative;
            padding-left: 1.75em;

            &:before {
                content: "";
                position: absolute;
                width: 0.375em;
                height: 0.375em;
                top: calc(0.875em - 0.1875em);
                left: 0.25em;
            
                border-radius: 50%;
                width: 0.375em;
                height: 0.375em;
            }
        }
    }

    > ul > li {
        &:before {
            background-color: var(--text-title);
        }

        > ul > li {
            &:before {
                width: 0.6em;
                height: 2px;
                top: calc(0.875em - 0.05em);
                border-radius: 0;
                background-color: var(--blue-low);
            }

            > ul > li {
                &:before {
                    background-color: var(--blue-med);
                }
            }
        }
    }

    hr {
        border-color: var(--blue-low);
        border-top-width: 2px;
        max-width: 70%;
        margin: 3em auto;
    }

    blockquote {
        font-weight: 500;
        font-style: italic;
        border-left-width: 0.25rem;
        border-left-color: var(--text-subtitle);
        quotes: "\201C""\201D""\2018""\2019";
        margin-top: 1.6em;
        margin-bottom: 1.6em;
        padding-left: 1em;
        color: var(--text-subtitle);
    }

    &[data-lang="en"] {
        blockquote p:first-of-type::before {
            content: open-quote;
        }

        blockquote p:last-of-type::after {
            content: close-quote;
        }
    }

    &[data-lang="jp"] {
        blockquote p:first-of-type::before {
            content: "「　";
        }

        blockquote p:last-of-type::after {
            content: "　」";
        }
    }

    h3,
    h4 {
        color: var(--text-title);
    }

    h1 {
        font-size: 2.25em;
        margin-top: 0;
        margin-bottom: 0.8888889em;
        line-height: 1.1111111;
    }

    h2 {
        font-size: 2em;
        // font-size: 1.5em;
        margin-top: 2em;
        margin-bottom: 1em;
        line-height: 1.3333333;
    }

    h3 {
        font-size: 1.25em;
        margin-top: 1.6em;
        margin-bottom: 0.6em;
        line-height: 1.6;
    }

    h4 {
        margin-top: 1.5em;
        margin-bottom: 0.5em;
        line-height: 1.5;
    }

    code {
        display: inline-block;
        padding-left: 0.4em;
        padding-right: 0.4em;
        font-weight: var(--fw-bold);
        font-size: 0.875em;
        color: var(--text-body);
        background-color: var(--blue-bg);

        // &:before {
        //     content: "`";
        // }

        // &:after {
        //     content: "`";
        // }
    }

    pre {
        color: var(--bg-second);
        background-color: var(--text-body);
        overflow-x: auto;
        font-size: 0.875em;
        line-height: 1.6;
        // line-height: 1.7142857;
        margin-top: 1.7142857em;
        margin-bottom: 1.7142857em;
        border-radius: 0.375rem;
        padding-top: 0.8571429em;
        padding-right: 1.1428571em;
        padding-bottom: 0.8571429em;
        padding-left: 1.1428571em;

        code {
            background-color: transparent;
            border-width: 0;
            border-radius: 0;
            padding: 0;
            font-weight: 400;
            color: inherit;
            font-size: inherit;
            font-family: inherit;
            line-height: inherit;

            &:before {
                content: none;
            }

            &:after {
                content: none;
            }
        }
    }

    table {
        width: 100%;
        table-layout: auto;
        text-align: left;
        margin-top: 2em;
        margin-bottom: 2em;
        font-size: 0.875em;
        line-height: 1.7142857;
    }

    thead {
        font-weight: var(--fw-bold);
        border-bottom-width: 1px;
        border-bottom-color: var(--text-title);
    }

    thead th {
        vertical-align: bottom;
        padding-right: 0.5714286em;
        padding-bottom: 0.5714286em;
        padding-left: 0.5714286em;
    }

    tbody tr {
        border-bottom-width: 1px;
        border-bottom-color: var(--text-subtitle);
    }

    tbody tr:last-child {
        border-bottom-width: 0;
    }

    tbody td {
        vertical-align: top;
        padding-top: 0.5714286em;
        padding-right: 0.5714286em;
        padding-bottom: 0.5714286em;
        padding-left: 0.5714286em;
    }

    img {
        box-shadow: 0 0 1.5rem rgba(var(--shadow), var(--shadow-strength));
    }

    p {
        margin-top: 1.25em;
        margin-bottom: 1.25em;

        > img {
            margin-top: 2em;
            margin-bottom: 2em;
        }
    }

    video {
        margin-top: 2em;
        margin-bottom: 2em;
    }

    figure {
        margin-top: 2em;
        margin-bottom: 2em;

        > * {
            margin-top: 0;
            margin-bottom: 0;
        }

        img {
            margin-left: auto;
            margin-right: auto;
        }

        figcaption {
            color: var(--text-light);
            font-size: 0.875em;
            line-height: 1.4285714;
            margin-top: 0.8571429em;
            // text-align: right;
        }
    }

    h2 code {
        font-size: 0.875em;
    }

    h3 code {
        font-size: 0.9em;
    }

    ol {
        margin-top: 1.25em;
        margin-bottom: 1.25em;
    }

    ul {
        margin-top: 1.25em;
        margin-bottom: 1.25em;
    }

    li {
        margin-top: 0.5em;
        margin-bottom: 0.5em;
    }

    > ul > li p {
        margin-top: 0.75em;
        margin-bottom: 0.75em;
    }

    // > ul > li > :first-child {
    //     margin-top: 1.25em;
    // }

    // > ul > li > :last-child {
    //     margin-bottom: 1.25em;
    // }

    // > ol > li > :first-child {
    //     margin-top: 1.25em;
    // }

    // > ol > li > :last-child {
    //     margin-bottom: 1.25em;
    // }

    ol ol,
    ol ul,
    ul ol,
    ul ul {
        margin-top: 0.75em;
        margin-bottom: 0.75em;
    }

    hr + * {
        margin-top: 0;
    }

    h2 + * {
        margin-top: 0;
    }

    h3 + * {
        margin-top: 0;
    }

    h4 + * {
        margin-top: 0;
    }

    thead th:first-child {
        padding-left: 0;
    }

    thead th:last-child {
        padding-right: 0;
    }

    tbody td:first-child {
        padding-left: 0;
    }

    tbody td:last-child {
        padding-right: 0;
    }

    > :first-child {
        margin-top: 0;
    }

    > :last-child {
        margin-bottom: 0;
    }
} // .prose

